--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.6.9",
     "dotenv": "^4.0.0",
-    "express": "~4.15.2",
-    "hbs": "~4.0.1",
+    "express": "^4.15.5",
+    "hbs": "^4.0.1",
     "mongoose": "^4.11.13",
-    "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "morgan": "^1.8.2",
+    "serve-favicon": "^2.4.5"
   }
 }
