Got mongo, express, and handlebars working1

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb://heroku_xg8vrcx7:sstde33pl24cjkk3c56cmthgdd@ds155684.mlab.com:55684/heroku_xg8vrcx7
+MONGODB_URI=mongodb://localhost/snake_vs_mongoose_db
